# kmj-copy

./: .gitignore  README.md
kilimanjaro/: Dockerfile  conftest.py  demo.env  docker-compose.dev.yml  manage.py  pyproject.toml  pytest.ini
kilimanjaro/certification/: admin.py  models.py  tests.py  urls.py
kilimanjaro/certification/api/: permissions.py  serializers.py  urls.py  views.py
kilimanjaro/chat/: consumers.py  middleware.py
kilimanjaro/chat/admin/: __init__.py  chat_message.py  chat_message_edit_log.py  chat_room.py  chat_room_block_log.py  report_message.py
kilimanjaro/chat/api/: pagination.py  permissions.py  urls.py
kilimanjaro/chat/models/: chat_message.py  chat_room.py
kilimanjaro/chat/tests/: chat_message_tests.py  chat_room_tests.py  (+1 more)
kilimanjaro/contact_us/: admin.py  apps.py  models.py  tests.py  urls.py
kilimanjaro/core/: admin.py  signals.py  tasks.py  tests.py  urls.py  views.py
kilimanjaro/country/: admin.py  models.py  tests.py
kilimanjaro/customer/: admin.py  models.py  tests.py
kilimanjaro/favorite/: models.py  tests.py  urls.py
kilimanjaro/kilimanjaro/: asgi.py  celery.py  routing.py  settings.py  urls.py  wsgi.py
kilimanjaro/kilimanjaro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
kilimanjaro/notification/: admin.py  consumers.py  models.py  signals.py  tests.py  urls.py
kilimanjaro/occupation/: admin.py  apps.py  models.py  tests.py
kilimanjaro/portfolio/: urls.py
kilimanjaro/skilled_worker/: admin.py  apps.py  models.py  signals.py  tests.py  urls.py
kilimanjaro/user/: authentication.py  views.py
(+92 files in other folders)
